[gd_scene load_steps=15 format=2]

[ext_resource path="res://Sprites/LightTextures/PlayerVisibleLight.png" type="Texture" id=1]
[ext_resource path="res://Sprites/LightTextures/SelfLight.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Spritesheets/PlayerSpritesheet.png" type="Texture" id=3]
[ext_resource path="res://Sprites/LightTextures/GlowstickLight.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Instances/Reticle.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=5]
radius = 10.5
height = 8.0

[sub_resource type="Animation" id=9]
resource_name = "Left Idle Off"
length = 0.833333
loop = true
step = 0.166667
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponEmitter:texture_scale")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.01 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.166667, 0.333333, 0.5, 0.666667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WeaponEmitter:position")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -9.5, -13 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Left Idle On"
length = 0.833333
loop = true
step = 0.166667
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponEmitter:texture_scale")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.166667, 0.333333, 0.5, 0.666667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WeaponEmitter:position")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -9.5, -13 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WeaponEmitter:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -9.5, -13 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WeaponEmitter:texture_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.01 ]
}

[sub_resource type="Animation" id=11]
resource_name = "South Idle Off"
length = 0.833333
loop = true
step = 0.166667
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.166667, 0.333333, 0.5, 0.666667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WeaponEmitter:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -13.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WeaponEmitter:texture_scale")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.01 ]
}

[sub_resource type="Animation" id=8]
resource_name = "South Idle On"
length = 0.833333
loop = true
step = 0.166667
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponEmitter:texture_scale")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.166667, 0.333333, 0.5, 0.666667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WeaponEmitter:position")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -13.5 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "South Walk Off"
length = 0.833333
loop = true
step = 0.166667
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.166667, 0.333333, 0.5, 0.666667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WeaponEmitter:texture_scale")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.01 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WeaponEmitter:position")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -13.5 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "South Walk On"
length = 0.833333
loop = true
step = 0.166667
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponEmitter:texture_scale")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.166667, 0.333333, 0.5, 0.666667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18, 19 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WeaponEmitter:position")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -13.5 ) ]
}

[node name="Player" type="KinematicBody2D"]
light_mask = 2
scale = Vector2( 2, 2 )
script = ExtResource( 5 )

[node name="PlayerSprite" type="Sprite" parent="."]
light_mask = 2
position = Vector2( 0.5, -30 )
texture = ExtResource( 3 )
hframes = 5
vframes = 7
frame = 10
__meta__ = {
"_edit_group_": true
}

[node name="KeepPlayerVisible" type="Light2D" parent="PlayerSprite"]
position = Vector2( -3, 1.5 )
texture = ExtResource( 1 )
mode = 2
range_item_cull_mask = 2

[node name="PlayerEmitter" type="Light2D" parent="PlayerSprite"]
visible = false
position = Vector2( -5.5, 12.5 )
texture = ExtResource( 2 )

[node name="WeaponEmitter" type="Light2D" parent="."]
position = Vector2( -9.5, -13 )
z_index = 1
texture = ExtResource( 4 )
texture_scale = 0.01
mode = 2
shadow_color = Color( 1, 0.984314, 0, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="RotateAround" parent="WeaponEmitter" instance=ExtResource( 6 )]
visible = false

[node name="CollwithEnvior" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 5 )

[node name="PlayerAnimation" type="AnimationPlayer" parent="."]
"anims/Left Idle Off" = SubResource( 9 )
"anims/Left Idle On" = SubResource( 10 )
anims/RESET = SubResource( 7 )
"anims/South Idle Off" = SubResource( 11 )
"anims/South Idle On" = SubResource( 8 )
"anims/South Walk Off" = SubResource( 12 )
"anims/South Walk On" = SubResource( 6 )
